# the-council

./: .dockerignore  .gitignore  00_The Council.md  CONSTITUTION.md  Dockerfile  README.md  TODO.md  backup.sh  compose.yaml  instance.compose.yaml.template  memory.py  pyproject.toml  run.py  run_post_session.py
.github/: copilot-instructions.md
Planning/: 00_Planning_Index.md  MVP_LOCAL.md
Prompts/: ralph_loop.md
Specifications/: 00_Requirements_Index.md  REQ-01_AWS_Infrastructure.md  REQ-02_Core_Agent_Framework.md  REQ-03_LLM_Integration.md  REQ-04_Guardrail_Blocks.md  REQ-05_Agent_Workflow_Engine.md  REQ-06_Memory_System.md  REQ-07_Agent_Communication.md  REQ-08_Core_Tools.md  REQ-09_Web_Chat_Channel.md  REQ-10_Activity_Dashboard.md  REQ-11_Triggering_Scheduling.md  REQ-12_Long_Term_Agents.md  REQ-13_Short_Term_Agents.md  REQ-14_Discord_Channel.md  REQ-15_Extended_Tools.md  REQ-16_Config_Editing_UI.md  REQ-17_Slack_Channel.md  REQ-18_Teams_Channel.md  REQ-19_SmithyAI_Tools.md  REQ-20_Deep_Research_Athena.md
agents/: campaign.yaml  ceo.yaml  email.yaml  marketing.yaml  ops.yaml  researcher.yaml  web_search.yaml
config/: browser_guardrails.yaml  discord.yaml  email.yaml  guardrails.yaml  marketing.yaml  schedules.yaml  schedules.yaml.template
conversation/: conversation.py
docs/: how-to-add-tools.md  how-to-create-agents.md  project-onboarding.md
engine/: __init__.py  block.py  channel_adapter.py  discord_gateway.py  discord_router.py  flow_loader.py  llm.py  logger.py  mailbox.py  paths.py  post_session_runner.py  runner.py  scheduler.py  state.py  (+1 more)
(+106 files in other folders)
