[project]
name = "council"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.2",
    "boto3>=1.42.83",
    "browser-use>=0.11.13",
    "chevron>=0.14.0",
    "chromadb>=1.5.5",
    "discord-py>=2.3",
    "google-analytics-data>=0.21.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
